update nuget packages, cleanup UI

--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <NetStandardImplicitPackageVersion>2.0.3</NetStandardImplicitPackageVersion>
@@ -8,7 +8,7 @@
     <None Remove="Package.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1931" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
