Added Viewer modal and got parameterized navigation working.

--- a/src/LagoVista.Kiosk.App/LagoVista.Kiosk.App/LagoVista.Kiosk.App.csproj
+++ b/src/LagoVista.Kiosk.App/LagoVista.Kiosk.App/LagoVista.Kiosk.App.csproj
@@ -32,6 +32,9 @@
     <EmbeddedResource Update="Views\HomeView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\KioskViewerView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\SplashView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
