--- a/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
+++ b/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
@@ -24,15 +24,15 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="2.1.1408-beta1613" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1408-beta1613" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1408-beta1613" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1408-beta1613" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1408-beta1613" />
-    <PackageReference Include="LagoVista.MediaServices.Models" Version="2.1.1408-beta1613" />
-    <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="2.1.1408-beta1613" />
-    <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="2.1.1408-beta1613" />
-    <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="2.1.1408-beta1613" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1434.1859" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1434.1859" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1434.1859" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1434.1859" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1434.1859" />
+    <PackageReference Include="LagoVista.MediaServices.Models" Version="2.1.1434.1859" />
+    <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="2.1.1434.1859" />
+    <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="2.1.1434.1859" />
+    <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="2.1.1434.1859" />
     <PackageReference Include="Microsoft.AppCenter" Version="4.2.0" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.2.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.2.0" />
