--- a/src/LagoVista.Kiosk.App/LagoVista.Kiosk.App.UWP/LagoVista.Kiosk.App.UWP.csproj
+++ b/src/LagoVista.Kiosk.App/LagoVista.Kiosk.App.UWP/LagoVista.Kiosk.App.UWP.csproj
@@ -12,7 +12,7 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.19041.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
     <FileAlignment>512</FileAlignment>
@@ -178,10 +178,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core">
-      <Version>2.1.1408-beta1613</Version>
+      <Version>2.1.1434.1859</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>2.1.1408-beta1613</Version>
+      <Version>2.1.1434.1859</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin">
       <Version>2.1.1402-beta0938</Version>
