--- a/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
+++ b/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <NetStandardImplicitPackageVersion>2.0.3</NetStandardImplicitPackageVersion>
     <DebugType>Full</DebugType>
   </PropertyGroup>
   <ItemGroup>
@@ -9,18 +8,18 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.11" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1408-beta1613" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1408-beta1613" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1408-beta1613" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1408-beta1613" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1434.1859" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1434.1859" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1434.1859" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1434.1859" />
     <PackageReference Include="Microsoft.AppCenter" Version="4.2.0" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.2.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.2.0" />
     <PackageReference Include="Microsoft.AppCenter.Distribute" Version="4.2.0" />
-    <PackageReference Include="Microsoft.NETCore.Platforms" Version="5.0.1" />
+    <PackageReference Include="Microsoft.NETCore.Platforms" Version="5.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="LagoVista.Core" Version="2.1.1408-beta1613" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1434.1859" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
