--- a/src/LagoVista.Xplat.WPF/LagoVista.XPlat.WPF.csproj
+++ b/src/LagoVista.Xplat.WPF/LagoVista.XPlat.WPF.csproj
@@ -4,7 +4,7 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="2.1.1408-beta1613" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1434.1859" />
     <PackageReference Include="System.IO.Ports" Version="5.0.1" />
   </ItemGroup>
   <ItemGroup>
