--- a/Apps/seawolf/SeaWolf.iOS/SeaWolf.iOS.csproj
+++ b/Apps/seawolf/SeaWolf.iOS/SeaWolf.iOS.csproj
@@ -298,34 +298,34 @@
       <Version>2.0.11</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core">
-      <Version>2.1.1520-beta0637</Version>
+      <Version>3.0.1522.906</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>2.1.1520-beta0637</Version>
+      <Version>3.0.1522.906</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>2.1.1520-beta0637</Version>
+      <Version>3.0.1522.906</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Deployment.Models">
-      <Version>2.1.1520-beta0637</Version>
+      <Version>3.0.1522.906</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.DeviceManagement.Models">
-      <Version>2.1.1520-beta0637</Version>
+      <Version>3.0.1522.906</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.DeviceMessaging.Models">
-      <Version>2.1.1520-beta0637</Version>
+      <Version>3.0.1522.906</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>2.1.1520-beta0637</Version>
+      <Version>3.0.1522.906</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Pipeline.Models">
-      <Version>2.1.1520-beta0637</Version>
+      <Version>3.0.1522.906</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.MediaServices.Models">
-      <Version>2.1.1520-beta0637</Version>
+      <Version>3.0.1522.906</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>2.1.1520-beta0637</Version>
+      <Version>3.0.1522.906</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
