--- a/Apps/seawolf/SeaWolf/SeaWolf.csproj
+++ b/Apps/seawolf/SeaWolf/SeaWolf.csproj
@@ -18,12 +18,12 @@
 
   <ItemGroup>
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.11" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1520-beta0637" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.1520-beta0637" />
-    <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="2.1.1520-beta0637" />
-    <PackageReference Include="LagoVista.IoT.DeviceMessaging.Models" Version="2.1.1520-beta0637" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1520-beta0637" />
-    <PackageReference Include="LagoVista.IoT.Pipeline.Models" Version="2.1.1520-beta0637" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1522.906" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="3.0.1522.906" />
+    <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="3.0.1522.906" />
+    <PackageReference Include="LagoVista.IoT.DeviceMessaging.Models" Version="3.0.1522.906" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1522.906" />
+    <PackageReference Include="LagoVista.IoT.Pipeline.Models" Version="3.0.1522.906" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
 
@@ -33,11 +33,11 @@
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.3.0" />
     <PackageReference Include="Microsoft.AppCenter.Distribute" Version="4.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="LagoVista.Core" Version="2.1.1520-beta0637" />
-    <PackageReference Include="LagoVista.MediaServices.Models" Version="2.1.1520-beta0637" />
-    <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="2.1.1520-beta0637" />
-    <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="2.1.1520-beta0637" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.1520-beta0637" />
+    <PackageReference Include="LagoVista.Core" Version="3.0.1522.906" />
+    <PackageReference Include="LagoVista.MediaServices.Models" Version="3.0.1522.906" />
+    <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="3.0.1522.906" />
+    <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="3.0.1522.906" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="3.0.1522.906" />
     <PackageReference Include="Xamarin.Forms.Maps" Version="5.0.0.2083" />
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.11" />
   </ItemGroup>
@@ -68,6 +68,12 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\MainView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\SensorsView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\SensorView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SplashView.xaml">
