Adding white logo asset

--- a/Apps/seawolf/SeaWolf.UWP/SeaWolf.UWP.csproj
+++ b/Apps/seawolf/SeaWolf.UWP/SeaWolf.UWP.csproj
@@ -158,7 +158,7 @@
     <Content Include="Assets\LargeTile.scale-125.png" />
     <Content Include="Assets\LargeTile.scale-150.png" />
     <Content Include="Assets\logo-seawolf-grey.png" />
-    <Content Include="Assets\map-example.PNG" />
+    <Content Include="Assets\logo-seawolf-white.png" />
     <Content Include="Assets\SmallTile.scale-125.png" />
     <Content Include="Assets\SmallTile.scale-150.png" />
     <Content Include="Assets\SplashScreen.scale-125.png" />
