--- a/Apps/seawolf/SeaWolf.iOS/SeaWolf.iOS.csproj
+++ b/Apps/seawolf/SeaWolf.iOS/SeaWolf.iOS.csproj
@@ -151,7 +151,6 @@
     <BundleResource Include="Resources\background-overlay-pixel-spaced-1.png" />
     <BundleResource Include="Resources\background-overlay-pixel-spaced-2.png" />
     <BundleResource Include="Resources\background-overlay-pixel-spaced-3.png" />
-    <BundleResource Include="Resources\map-example.PNG" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\tab_about.png" />
@@ -360,6 +359,7 @@
     <BundleResource Include="Resources\Default.png" />
     <BundleResource Include="Resources\Default%402x.png" />
     <Content Include="Resources\everglades.png" />
+    <Content Include="Resources\logo-seawolf-white.png" />
     <Content Include="Resources\thermo.png" />
     <Content Include="Resources\SeaWolf.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
