--- a/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
+++ b/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
@@ -33,6 +33,7 @@
     <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="3.0.1524.953" />
     <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="3.0.1524.953" />
     <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="3.0.1524.953" />
+    <PackageReference Include="LagoVista.IoT.Pipeline.Models" Version="3.0.1524.953" />
     <PackageReference Include="Microsoft.AppCenter" Version="4.3.0" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.3.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.3.0" />
