--- a/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
+++ b/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
@@ -14,7 +14,7 @@
     <FileAlignment>512</FileAlignment>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <TargetFrameworkVersion>v11.0.99</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v11.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,14 +55,41 @@
     <Compile Include="Loggers\AppCenterLogger.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AppService.cs" />
     <Compile Include="Services\BluetoothSerial.cs" />
     <Compile Include="Services\ClipBoard.cs" />
     <Compile Include="Services\DispatcherServices.cs" />
+    <Compile Include="Services\GATTConnection.cs" />
     <Compile Include="Services\NetworkService.cs" />
+    <Compile Include="Services\ProcessWriter.cs" />
     <Compile Include="Services\SecureStorage.cs" />
+    <Compile Include="Services\SerialPort.cs" />
     <Compile Include="Services\StorageService.cs" />
     <Compile Include="Services\TCPClient.cs" />
     <Compile Include="Services\UDPClient.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\CdcAcmSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\Ch34xSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\CommonUsbSerialPort.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\Cp21xxSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\FtdiSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\Parity.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\ProbeTable.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\ProlificSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\STM32SerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbId.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbSerialDriver.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbSerialPort.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbSerialProber.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbSerialRuntimeException.cs" />
+    <Compile Include="Services\UsbSerialOTG\driver\UsbSupport.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\AsyncExtensions.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\BufferExtensions.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\EventHandlerExtensions.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\SerialDataReceivedArgs.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\SerialInputOutputManager.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\UsbManagerExtensions.cs" />
+    <Compile Include="Services\UsbSerialOTG\Extensions\UsbSerialPortInfo.cs" />
+    <Compile Include="Services\UsbSerialOTG\Util\HexDump.cs" />
     <Compile Include="Services\WebSocket.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -112,7 +139,7 @@
       <Version>5.0.0.2083</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Google.Android.Material">
-      <Version>1.2.1.1</Version>
+      <Version>1.0.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
