--- a/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
+++ b/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
@@ -8,19 +8,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.11" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1569.714" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="3.0.1569.714" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1569.714" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="3.0.1569.714" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1573.517" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="3.0.1573.517" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1573.517" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="3.0.1573.517" />
     <PackageReference Include="Microsoft.AppCenter" Version="4.3.0" />
-    <PackageReference Include="LagoVista.IoT.DeviceMessaging.Models" Version="3.0.1569.714" />
+    <PackageReference Include="LagoVista.IoT.DeviceMessaging.Models" Version="3.0.1573.517" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.3.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.3.0" />
     <PackageReference Include="Microsoft.AppCenter.Distribute" Version="4.3.0" />
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="5.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />
-    <PackageReference Include="LagoVista.Core" Version="3.0.1569.714" />
+    <PackageReference Include="LagoVista.Core" Version="3.0.1573.517" />
     <PackageReference Include="Xamarin.Forms.Maps" Version="5.0.0.2083" />
   </ItemGroup>
   <ItemGroup>
@@ -110,10 +110,16 @@
     <EmbeddedResource Update="Views\DeviceAccess\Settings\WiFiView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\DeviceSetup\BillingView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\DeviceSetup\ConnectHardwareView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\DeviceSetup\ConnectivityView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\DeviceSetup\DeviceDetailView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\DeviceSetup\DiagnosticsView.xaml">
@@ -126,6 +132,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\DeviceSetup\MyDeviceView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\DeviceSetup\OTADFUView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\DeviceSetup\PairHardwareView.xaml">
