--- a/src/LagoVista.XPlat.iOS/LagoVista.XPlat.iOS.csproj
+++ b/src/LagoVista.XPlat.iOS/LagoVista.XPlat.iOS.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Renderers\TextAreaRenderer.cs" />
     <Compile Include="Services\ClipBoard.cs" />
     <Compile Include="Services\DispatcherService.cs" />
+    <Compile Include="Services\GATTConnection.cs" />
     <Compile Include="Services\NetworkService.cs" />
     <Compile Include="Services\Reachability.cs" />
     <Compile Include="Services\SecureStorage.cs" />
@@ -173,19 +174,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core">
-      <Version>3.0.1577.626</Version>
+      <Version>3.0.1579.1359</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>3.0.1577.626</Version>
+      <Version>3.0.1579.1359</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>3.0.1577.626</Version>
+      <Version>3.0.1579.1359</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>3.0.1577.626</Version>
+      <Version>3.0.1579.1359</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>3.0.1577.626</Version>
+      <Version>3.0.1579.1359</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>4.3.0</Version>
@@ -215,7 +216,7 @@
       <Version>5.0.0.2083</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.AI.Models">
-      <Version>3.0.1577.626</Version>
+      <Version>3.0.1579.1359</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
