--- a/Apps/seawolf/SeaWolf.Android/SeaWolf.Android.csproj
+++ b/Apps/seawolf/SeaWolf.Android/SeaWolf.Android.csproj
@@ -16,7 +16,7 @@
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v11.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
     <AndroidUseAapt2>true</AndroidUseAapt2>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
@@ -58,49 +58,55 @@
       <Version>2.0.11</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.AI.Models">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1429</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1556</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1556</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1556</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Deployment.Models">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1429</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1429</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.DeviceManagement.Models">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1429</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.DeviceMessaging.Models">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1429</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1429</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Pipeline.Models">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1429</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.MediaServices.Models">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1429</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>3.0.1604.519</Version>
+      <Version>3.0.1795.1429</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.Core">
+      <Version>1.7.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Google.Android.Material">
+      <Version>1.5.0.2</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.MediaRouter">
-      <Version>1.2.0</Version>
+      <Version>1.2.6.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Palette">
-      <Version>1.0.0.5</Version>
+      <Version>1.0.0.13</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.2" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
